2005-07-07  Adrian Straetling  <straetling@de.ibm.com>
	
	* config/s390/s390.c: (optimization_options): Enable
	TARGET_MVCLE at -Os.
	* doc/invoke.texi: Document changes in default behaviour.
	* config/s390/s390.opt: ("mvcle"): Fix typo: is "mmvcle".

2005-07-07  Adrian Straetling  <straetling@de.ibm.com>

	* expr.c: (set_storage_via_setmem): Convert opchar to mode
	defined by back-end.

2005-07-07  Jakub Jelinek  <jakub@redhat.com>

	* config/sparc/sparc.md (stack_protect_testsi): Put clobbers after
	all sets in the pattern.
	* config/rs6000/rs6000.md (stack_protect_testsi,
	stack_protect_testdi): Likewise.

2005-07-06  Jeff Law  <law@redhat.com>

	* tree-vrp.c (simplify_using_ranges): Kill.
	(vrp_finalize): Remove call to simplify_using_ranges.
	(simplify_stmt_using_ranges): New function extracted from
	simplify_using_ranges.
	(simplify_div_or_mod_using_ranges): Likewise.
	(simplify_abs_using_ranges): Likewise.
	(simplify_cond_using_ranges): New function.
	* tree-flow.h (simplify_stmt_using_ranges): Prototype.
	* tree-ssa-propagate.c (substitute_and_fold): Call
	simplify_stmt_using_ranges if we have range information.

2005-07-06  James E. Wilson  <wilson@specifixinc.com>

	* config/ia64/ia64.c (ia64_reorg): Check optimize before
	ia64_flag_schedule_isns2.

	* config/ia64/ia64.c (ia64_expand_movxf_movrf): Don't word swap when
	reading/writing general registers.
	(ia64_function_arg): Revert 2005-06-18 change.

2005-07-06  John David Anglin  <dave.anglin@nrc-crnc.gc.ca>

	* pa.c (legitimize_pic_address): Use gcc_assert instead of abort.
	(legitimize_tls_address): Use gcc_unreachable instead of abort.

2005-07-06  Kaz Kojima  <kkojima@gcc.gnu.org>

	* function.c (expand_function_end): Revert part of 2005-06-27
	patch.  Do sjlj_emit_function_exit_after after return_label.

2005-07-06  Kazu Hirata  <kazu@codesourcery.com>

	* doc/install.texi (--disable-libssp): New.

2005-07-06  Fariborz Jahanian <fjahanian@apple.com>
