@@ -1924,18 +1924,11 @@
 
 (define_expand "setmem<mode>"
   [(set (match_operand:BLK 0 "memory_operand" "")
-        (match_operand 2 "const_int_operand" ""))
+        (match_operand:QI 2 "general_operand" ""))
    (use (match_operand:GPR 1 "general_operand" ""))
    (match_operand 3 "" "")]
   ""
-{
-  /* If value to set is not zero, use the library routine.  */
-  if (operands[2] != const0_rtx) 
-    FAIL;
-
-  s390_expand_clrmem (operands[0], operands[1]); 
-  DONE;
-})
+  "s390_expand_setmem (operands[0], operands[1], operands[2]); DONE;")
 
 ; Clear a block that is up to 256 bytes in length.
 ; The block length is taken as (operands[1] % 256) + 1.
@@ -2010,15 +2003,15 @@
      (clobber (reg:CC CC_REGNUM))])]
   "operands[3] = gen_label_rtx ();")
 
-; Clear a block of arbitrary length.
+; Initialize a block of arbitrary length with (operands[2] % 256). 
 
-(define_expand "clrmem_long"
+(define_expand "setmem_long"
   [(parallel
     [(clobber (match_dup 1))
      (set (match_operand:BLK 0 "memory_operand" "")
-          (const_int 0))
+          (match_operand 2 "shift_count_operand" ""))
      (use (match_operand 1 "general_operand" ""))
-     (use (match_dup 2))
+     (use (match_dup 3))
      (clobber (reg:CC CC_REGNUM))])]
   ""
 {
@@ -2036,18 +2029,18 @@
 
   operands[0] = replace_equiv_address_nv (operands[0], addr0);
   operands[1] = reg0;
-  operands[2] = reg1;
+  operands[3] = reg1;
 })
 
-(define_insn "*clrmem_long"
+(define_insn "*setmem_long"
   [(clobber (match_operand:<DBL> 0 "register_operand" "=d"))
-   (set (mem:BLK (subreg:P (match_operand:<DBL> 2 "register_operand" "0") 0))
-        (const_int 0))
-   (use (match_dup 2))
+   (set (mem:BLK (subreg:P (match_operand:<DBL> 3 "register_operand" "0") 0))
+        (match_operand 2 "shift_count_operand" "Y"))
+   (use (match_dup 3))
    (use (match_operand:<DBL> 1 "register_operand" "d"))
    (clobber (reg:CC CC_REGNUM))]
   ""
-  "mvcle\t%0,%1,0\;jo\t.-4"
+  "mvcle\t%0,%1,%Y2\;jo\t.-4"
   [(set_attr "length" "8")
    (set_attr "type" "vs")])
 
